# rules_karma

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  generate.js  generate.ts  generate_js.js  index.bzl  package.json
example/: BUILD.bazel  bundle.spec.js  thing.js  thing.spec.js
example/ts/: thing.spec.ts  thing.ts  tsconfig.json
examples/: BUILD.bazel  thing.js
examples/adders/: add0.js  add1.js  add10.js  add100.js  add101.js  add102.js  add103.js  add104.js  add105.js  add106.js  add107.js  add108.js  add109.js  add11.js  add110.js  add111.js  add112.js  add113.js  add114.js  add115.js  add116.js  add117.js  add118.js  add119.js  add12.js  add120.js  add121.js  add122.js  add123.js  add124.js  add125.js  add126.js  add127.js  add128.js  add129.js  add13.js  add130.js  add131.js  add132.js  add133.js  (+960 more)
examples/amd/: BUILD.bazel  README.md  thing.js  thing.spec.js
examples/basic/: BUILD.bazel  index.js  index.spec.js
examples/specs/: add0.spec.js  add1.spec.js  add2.spec.js  add3.spec.js  add4.spec.js  add5.spec.js  add6.spec.js  add7.spec.js  add8.spec.js  add9.spec.js
examples/ts/: BUILD.bazel  foo.spec.ts  foo.ts  tsconfig.json
examples/typescript/: BUILD.bazel
internal/: BUILD.bazel  karma.conf.js  karma_test.bzl  loader.js  run_karma.sh  test-main.js
internal/karma_concat_js/: BUILD.bazel  index.ts
tools/: bazel.rc
