load("//:index.bzl", "karma_test")

karma_test(
    name = "example",
    deps = glob(["thing*.js"]),
    tags = ["local"]
)

# Experiment: how does our setup work with a large program?
# FIRST, generate the input files:
# node generate.js specs; node generate.js adders
karma_test(
    name = "load",
    deps = glob(["specs/*.js", "adders/*.js"]),
    tags = ["local"],
)

# Experiment: what do we need to do to serve a single JS file
# with the individual AMD js files inside?
karma_test(
    name = "bundled",
    deps = ["bundle.spec.js"],
    tags = ["local"],
)
