load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "ts_lib",
    srcs = glob(["*.ts"]),
    tsconfig = ":tsconfig.json",
)

load("@karma//:index.bzl", "karma_test")

karma_test(
    name = "ts",
    deps = [":ts_lib",
      # FIXME(alexeagle): doesn't belong here
      "//internal/karma_concat_js",
    ],
    tags = ["local"]
)